Add "checkDiffs", "showDiff", message from Popup to background.

--- a/list.html
+++ b/list.html
@@ -11,9 +11,9 @@
   <body>
     <div class="container">
       <div class="row">
-        <h2>WebPageDiff - List Manager</h2>
+        <div class="well"><h2>WebPageDiff - List Manager</h2></div>
       </div>
-      <div id="listContent">
+      <div class="row" id="listContent">
       </div>
     </div>
   </body>
