--- a/popup.html
+++ b/popup.html
@@ -27,7 +27,13 @@
         <div class="clickable" id="addPage"><i class="icon-plus-sign"></i> Add Page</div>
       </li>
       <li>
-        <div class="clickable" id="manageList"><i class=" icon-list"></i> Manage List</div>
+        <div class="clickable" id="showDiff"><i class="icon-eye-open"></i> Show Diff</div>
+      </li>
+      <li>
+        <div class="clickable" id="checkDiffs"><i class="icon-refresh"></i> Check Diffs</div>
+      </li>
+      <li>
+        <div class="clickable" id="manageList"><i class="icon-list"></i> Manage List</div>
       </li>
     </ul>
   </body>
